one single font

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <meta name="keywords" content="wedding, wedding invitation, invitation, the wedding"/>
     <meta name="author" content="Valentin si Mihaela"/>
     <link rel="icon" href="images/couple-circle.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href='https://fonts.googleapis.com/css?family=Didact+Gothic' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Estonia" rel="stylesheet">
@@ -27,6 +29,9 @@
     <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Parisienne" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Calligraffitti" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Licorice" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
+
 
 
     <!-- Animate.css -->
@@ -90,6 +95,7 @@
 <div id="page">
 
     <!--Floating button-->
+    <!--Floating button-->
     <div id="floating-button" class="float">
         <div class="control-center open">
             <div class="audio-play">
@@ -116,23 +122,23 @@
         </div>
     </div>
 
-    <div id="overlay">
-        <div class="content" style="display: flex; justify-content: center; align-items: center;">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box fadeInUp animated-fast">
-                        <img src="images/couple-circle.png" alt="" class="couple-main">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                        <h1 style="font-family: 'Parisienne',serif; color: #ffffff; ">Valentin & Mihaela</h1>
-                        <button class="btn btn-primary" id="open-invitation">Deschide Invitația</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<!--    <div id="overlay">-->
+<!--        <div class="content" style="display: flex; justify-content: center; align-items: center;">-->
+<!--            <div class="container">-->
+<!--                <div class="row">-->
+<!--                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box fadeInUp animated-fast">-->
+<!--                        <img src="images/couple-circle.png" alt="" class="couple-main">-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="row">-->
+<!--                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">-->
+<!--                        <h1 style="font-family: 'Parisienne',serif; color: #ffffff; ">Valentin & Mihaela</h1>-->
+<!--                        <button class="btn btn-primary" id="open-invitation">Deschide Invitația</button>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
 
     <div id="fh5co-header">
@@ -148,14 +154,14 @@
             </div>
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                    <h1 style="font-family: 'Parisienne', Arial, serif; ">Valentin & Mihaela</h1>
-                    <h3 style="font-weight: bold; font-family: 'Calligraffitti', Arial, serif; ">29 Iulie 2023</h3>
+                    <h1 style="font-family: 'Dancing Script', Arial, serif; ">Valentin & Mihaela</h1>
+                    <h3 style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;">29 Iulie 2023</h3>
                     <div class="simply-countdown simply-countdown-wedding"></div>
                     <br>
                     <p>
                         <a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=NW0zY2Ewam91bnUzbW5ub2YwdjVxaTliNmUgcDY4MjI3cmY0dTJ0cWI1b3JrZjEwbTN1NDRAZw&tmsrc=p68227rf4u2tqb5orkf10m3u44%40group.calendar.google.com"
                            target="_blank" class="btn btn-primary btn-sm">Save the date</a><br>
-                        <i style="font-size: 15px">*Faceți clic pe acest buton pentru a salva data în Google
+                        <i style=" font-size: 15px ;font-family: 'Yanone Kaffeesatz', sans-serif; font-weight:300;  ">*Faceți click pe acest buton pentru a salva data în Google
                             Calendar</i>
                     </p>
                 </div>
@@ -179,7 +185,7 @@
                         <img src="images/valentin-square.png" alt="groom" class="img-responsive">
                     </div>
                     <div class="desc-groom">
-                        <h3>Valentin</h3>
+                        <h3 style="font-size: 38px; color:#113468 ;font-family: 'Dancing Script', Arial, serif;" >Valentin</h3>
                     </div>
                 </div>
                 <p class="heart text-center"><i class="icon-heart2"></i></p>
@@ -188,7 +194,7 @@
                         <img src="images/mihaela-square.png" alt="groom" class="img-responsive">
                     </div>
                     <div class="desc-bride">
-                        <h3>Mihaela</h3>
+                        <h3 style="font-size: 38px; color:#113468 ;font-family: 'Dancing Script', Arial, serif;" >Mihaela</h3>
                     </div>
                 </div>
             </div>
@@ -199,7 +205,7 @@
             <div class=" animate-box">
                 <div class="col-md-12 text-center">
                     <img src="images/riciu-circle.png" width="150" height="150">
-                    <h3 style="font-family: Sacramento, Arial, serif ; color: #113468 ; font-size: 30px;">Ionut si
+                    <h3 style="font-size: 38px; color:#113468 ;font-family: 'Dancing Script', Arial, serif;" >Ionut si
                         Simona Riciu</h3>
                 </div>
             </div>
@@ -211,7 +217,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                    <h2>Save The Date <a href="calendar.ics" class="btn btn-info"><i class="icon-download2"></i></a>
+                    <h2 style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;"  >Save The Date <a href="calendar.ics" class="btn btn-info"><i class="icon-download2"></i></a>
                     </h2>
                 </div>
             </div>
@@ -219,14 +225,13 @@
 
                 <div class="col-sm-4 col-sm-4 text-center">
                     <div class="event-wrap animate-box">
-                        <h3 style="font-family: 'Oswald', Arial, serif;">Cununia civila</h3>
+                        <h3 style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;">Cununia civila</h3>
                         <div class="event-col">
                             <i class="icon-clock"></i>
                             <span>15:30</span>
                             <span></span>
                         </div>
-                        <p style="font-family: 'Courgette', Arial, serif">Cununia civilă va avea loc la Primăria
-                            Gologanu</p>
+                        <p style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;" >Primăria Gologanu</p>
 
                         <a href="https://goo.gl/maps/ka2V7UyaR87LYnk7A" target="_blank"
                            class="btn btn-primary">Deschide Maps<i class="icon-map2"></i></a>
@@ -234,30 +239,27 @@
                 </div>
                 <div class="col-sm-4 col-sm-4 text-center">
                     <div class="event-wrap animate-box">
-                        <h3 style="font-family: 'Oswald', Arial, serif;">Cununia religioasă</h3>
+                        <h3 style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;">Cununia religioasă</h3>
                         <div class="event-col">
                             <i class="icon-clock"></i>
                             <span>16:00</span>
                             <span></span>
                         </div>
-                        <p style="font-family: 'Courgette', Arial, serif">Cununia religioasă va avea loc la Biserica Sf.
-                            Cuvioasa Parascheva,
-                            Gologanu </p>
+                        <p style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;">Biserica Sf. Cuvioasa Parascheva </p>
 
                         <a href="https://goo.gl/maps/kARTZ2ADhYbYe2Ht5" target="_blank"
-                           class="btn btn-primary">Deschide Maps<i class="icon-map2"></i></a>
+                           class="btn btn-primary">Deschide Maps <i class="icon-map2"></i></a>
                     </div>
                 </div>
                 <div class="col-sm-4 col-sm-4 text-center">
                     <div class="event-wrap animate-box">
-                        <h3 style="font-family: 'Oswald', Arial, serif;">Petrecere</h3>
+                        <h3 style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;">Petrecere</h3>
                         <div class="event-col">
                             <i class="icon-clock"></i>
                             <span>20:00</span>
                             <span></span>
                         </div>
-                        <p style="font-family: 'Courgette', Arial, serif">Petrecerea va avea loc la Pensiunea
-                            Sara </p>
+                        <p style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;" >Pensiunea Sara </p>
 
                         <a href="https://goo.gl/maps/Mxqasq46iSxyhp587" target="_blank"
                            class="btn btn-primary">Deschide Maps<i class="icon-map2"></i></a>
@@ -280,7 +282,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                    <h2>Galerie Foto Local</h2>
+                    <h2 style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;">Galerie Foto Local</h2>
                 </div>
             </div>
             <div class="row row-bottom-padded-md animate-box">
@@ -302,8 +304,8 @@
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
                         </button>
                         <div class="section-padding">
-                            <h3>Mulțumim!</h3>
-                            <p>Ne bucurăm că veți fi alături de noi, în ziua cea mare!.</p>
+                            <h3 style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;">Mulțumim!</h3>
+                            <p style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;" >Ne bucurăm că veți fi alături de noi, în ziua cea mare!.</p>
                             <div id="add-to-cal"></div>
                         </div>
                     </div>
@@ -316,33 +318,33 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                        <h2>Raspunde la invitație</h2>
-
+                        <h2 style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;" >Raspunde la invitație</h2>
+                        <h3 style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;">Vă rugăm să ne oferiți un răspuns pâna la data de 01.07.2023 </h3>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center animate-box">
-                        <h2>Vă rugăm să ne oferiți un răspuns pâna la data de 01.06.2023 </h2>
+
                         <form id="rsvp-form" class="rsvp-form"
                               action=""
                               method="POST">
                             <div class="row  form-group">
                                 <div class="col-md-6">
 
-                                    <input type="text" name="first_name_yes" id="first_name_yes"
+                                    <input style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;" type="text" name="first_name_yes" id="first_name_yes"
                                            class="form-control"
                                            placeholder="Prenume" required>
                                 </div>
                                 <div class="col-md-6">
 
-                                    <input type="text" name="last_name_yes" id="last_name_yes" class="form-control"
+                                    <input style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;" type="text" name="last_name_yes" id="last_name_yes" class="form-control"
                                            placeholder="Nume de Familie" required>
                                 </div>
                             </div>
                             <div class="row form-group">
                                 <div class="col-md-12">
 
-                                    <input type="number" name="invite_code_yes" id="invite_code_yes"
+                                    <input style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;" type="number" name="invite_code_yes" id="invite_code_yes"
                                            class="form-control" min="0"
                                            placeholder="Codul de invitație"
                                            required>
@@ -350,14 +352,14 @@
                             </div>
                             <div class="row form-group">
                                 <div class="col-md-12">
-                                    <label for="hotel" style="font-size: large ">Bifați dacă doriți cazare</label>
-                                    <input type="checkbox" name="hotel" id="hotel" class="form-check-input">
+                                    <label for="hotel" style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;">Bifați dacă doriți cazare</label>
+                                    <input type="checkbox" onchange="toggleCheckbox(this)" name="hotel" id="hotel" class="form-check-input">
                                 </div>
                             </div>
 
                             <div class="row form-group">
                                 <div class="col-md-12">
-                                    <label for="child" style="font-size: large ">Bifați dacă veniți cu
+                                    <label for="child" style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;">Bifați dacă veniți cu
                                         copil/copii</label>
                                     <input type="checkbox" name="child" id="child" class="form-check-input">
                                 </div>
@@ -365,7 +367,7 @@
 
                             <div class="row form-group">
                                 <div class="col-md-12">
-                                    <label for="single" style="font-size: large ">Bifați dacă veniți
+                                    <label for="single" style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;">Bifați dacă veniți
                                         neînsoțit</label>
                                     <input type="checkbox" name="single" id="single" class="form-check-input">
                                 </div>
@@ -373,7 +375,7 @@
 
                             <div class="row form-group">
                                 <div class="col-md-12">
-                                        <textarea name="message_yes" id="message_yes" cols="20" rows="3"
+                                        <textarea style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;" name="message_yes" id="message_yes" cols="20" rows="3"
                                                   class="form-control"
                                                   placeholder="Opțional, dacă aveți mențiuni"></textarea>
                                 </div>
@@ -402,10 +404,10 @@
             <div class="row">
                 <div class="col-md-4 col-md-offset-4 animate-box">
                     <div class="fh5co-contact-info">
-                        <h3>Informații de contact</h3>
+                        <h3 style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;">Informații de contact</h3>
                         <ul>
-                            <li class="phone"><a href="tel://+40763679142">Valentin +40 763 679 142</a></li>
-                            <li class="phone"><a href="tel://+40768924309">Mihaela +40 768 924 309</a></li>
+                            <li class="phone"><a style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;" href="tel://+40763679142">Valentin +40 763 679 142</a></li>
+                            <li class="phone"><a style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;" href="tel://+40768924309">Mihaela +40 768 924 309</a></li>
                         </ul>
                     </div>
 
@@ -427,7 +429,7 @@
                 <div class="col-md-12 text-center">
                     <img src="images/couple-circle.png" width="100" height="100">
                     <br>
-                    <h1 style="font-family: 'Satisfy', Arial, serif">Valentin & Mihaela</h1>
+                    <h1 style=" color:#113468 ;font-family: 'Dancing Script', Arial, serif;">Valentin & Mihaela</h1>
                 </div>
             </div>
         </div>
@@ -528,27 +530,9 @@
     $('#open-invitation').click(function () {
         $('#overlay').addClass('hide-overlay');
         playAudio1();
-        /*yang bagian floating button ada animasinya tapi karena ketutup dulu sama overlay jadinya gak nampak*/
-        /*pengen pas di klik buka undangan baru jalan animasinya*/
-        /*var c = document.getElementsByClassName('right-sidebar');
-        for (var i = 0; i < c.length; i++) {
-            c[i].classList.add('animate');
-        }*/
     });
 
-    $.get("https://api.github.com/repos/ngodingsolusi/the-wedding-of-rehan-maulidan/issues?state=all&per_page", function (data) {
-        for (let i = 0; i < data.length; i++) {
-            const item = `
-				<a class="list-group-item">
-					<div class="name"><span class="strong" style="font-size: 24px">${data[i].user.login}</span> <span class="label label-success">${data[i].labels.length > 0 ? data[i].labels[0].name : 'Tanpa Keterangan'}</span></div>
-					<hr style="margin-top: 0;">
-					<div class="comment">${new showdown.Converter().makeHtml(data[i].body)}</div>
-				</a>
-			`;
 
-            $("#fh5co-testimonial .list-group").append(item);
-        }
-    });
 
     function scrollToElement(el) {
         $("html, body").animate({scrollTop: $(`#${el}`).offset().top}, 1000);
@@ -590,7 +574,7 @@
     }
 
     function togglePlayButton1(play) {
-        document.getElementById("youtube-icon1").src = play ? "https://i.imgur.com/IDzX9gL.png" : "https://i.imgur.com/quyUPXN.png";
+        document.getElementById("youtube-icon1").src = play ? "images/audio/sound.png" : "images/audio/mute.png";
     }
 
     function toggleAudio1() {
