--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <div class="simply-countdown simply-countdown-wedding"></div>
                     <br>
                     <p>
-                        <a href="https://calendar.google.com/calendar/u/0/r/eventedit/NDJwcGs4aGM4cGxoc2hycXNwZDEyc2I4NjggYml2b2xhcnUubWloYUBt"
+                        <a href="calendar.ics"
                            target="_blank" class="btn btn-primary btn-sm">Save the date</a><br>
                         <i style=" font-size: 15px ;font-family: 'Yanone Kaffeesatz', sans-serif; font-weight:300;  ">*Faceți click pe acest buton pentru a salva data în Google
                             Calendar</i>
