--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Nunta Valentin si Mihaela</title>
+    <title>Nunta Mihaela & Valentin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Nunta Valentin si Mihaela"/>
+    <meta name="description" content="Nunta Mihaela & Valentin"/>
     <meta name="keywords" content="wedding, wedding invitation, invitation, the wedding"/>
-    <meta name="author" content="Valentin si Mihaela"/>
+    <meta name="author" content="Mihaela & Valentin"/>
     <link rel="icon" href="images/couple-circle.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -129,8 +129,10 @@
 
 
     <div id="overlay">
-        <div class="content" style="display: flex; justify-content: center; align-items: center;">
+        <div class="content" style="display: flex; justify-content: center; align-items: end;">
             <div class="container">
+                <div class="row">
+                </div>
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box fadeInUp animated-fast">
                         <img src="images/couple-circle.png" alt="" class="couple-main">
@@ -138,7 +140,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                        <h1 style="font-size:50px; color:#ffffff; font-family: 'WindSong', Arial, serif;" >Valentin & Mihaela</h1>
+                        <h1 style="font-size:50px; color:#ffffff; font-family: 'WindSong', Arial, serif;" > Mihaela & Valentin</h1>
                         <button class="btn btn-primary" id="open-invitation">Deschide Invitația</button>
                     </div>
                 </div>
@@ -163,7 +165,7 @@
             </div>
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                    <h1 style="font-size:50px; color:#113468; font-family: 'WindSong', Arial, serif;" >Valentin & Mihaela</h1>
+                    <h1 style="font-size:50px; color:#113468; font-family: 'WindSong', Arial, serif;" > Mihaela & Valentin</h1>
                     <h3 style="font-size:18px; color:#113468; font-family: 'Itim', Arial, serif;" >29 IULIE 2023</h3>
                     <div class="simply-countdown simply-countdown-wedding"></div>
                     <br>
@@ -190,20 +192,20 @@
             </div>
             <div class="couple-wrap animate-box">
                 <div class="couple-half">
-                    <div class="groom">
-                        <img src="images/valentin-square.png" alt="groom" class="img-responsive">
-                    </div>
-                    <div class="desc-groom">
-                        <h3 style="font-size:35px; color:#113468; font-family: 'WindSong', Arial, serif;" >Valentin</h3>
-                    </div>
-                </div>
-                <p class="heart text-center"><i class="icon-heart2"></i></p>
-                <div class="couple-half">
                     <div class="bride">
                         <img src="images/mihaela-square.png" alt="groom" class="img-responsive">
                     </div>
                     <div class="desc-bride">
                         <h3 style="font-size:35px; color:#113468; font-family: 'WindSong', Arial, serif;"  >Mihaela</h3>
+                    </div>
+                </div>
+                <p class="heart text-center"><i class="icon-heart2"></i></p>
+                <div class="couple-half">
+                    <div class="groom">
+                        <img src="images/valentin-square.png" alt="groom" class="img-responsive">
+                    </div>
+                    <div class="desc-groom">
+                        <h3 style="font-size:35px; color:#113468; font-family: 'WindSong', Arial, serif;" >Valentin</h3>
                     </div>
                 </div>
             </div>
@@ -216,11 +218,12 @@
                 <div class="col-md-12 text-center">
 
                     <img src="images/riciu-circle.png" width="150" height="150">
-
-                    <h3 style="font-size:28px; color:#113468; font-family: 'WindSong', Arial, serif;"  >Ionuț și
-                        Simona Riciu</h3>
+                    <br>
+                    <h3 style="font-size:28px; color:#113468; font-family: 'WindSong', Arial, serif;"  >Simona și
+                        Ionuț Riciu</h3>
                 </div>
             </div>
+     
             <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
                 <h2 style="font-size:14px; color:#113468; font-family: 'Itim', Arial, serif;"  >VĂ INVITĂM SĂ NE FIȚI ALĂTURI ÎN CEA MAI SPECIALĂ ZI DIN VIAȚA NOASTRĂ! </h2>
             </div>
@@ -444,7 +447,7 @@
                 <div class="col-md-12 text-center">
                     <img src="images/couple-circle.png" width="100" height="100">
                     <br>
-                    <h1 style="font-size:40px; color:#113468; font-family: 'WindSong', Arial, serif;" >Valentin & Mihaela</h1>
+                    <h1 style="font-size:40px; color:#113468; font-family: 'WindSong', Arial, serif;" > Mihaela & Valentin</h1>
                 </div>
             </div>
         </div>
